--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dev Server</title>
+    <title>Gyon Shayel Joshua</title>
   </head>
   <body>
     <header class="header container">
