--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="My Portfolio Website" />
+    <meta name="keywords" content="web design, html, css, javascript" />
     <title>Gyon Shayel Joshua</title>
   </head>
   <body>
@@ -21,7 +23,7 @@
           <li><a class="header__link" href="#work">Work</a></li>
           <li><a class="header__link" href="#contact">Contact</a></li>
         </ul>
-        <button class="header__bars">
+        <button aria-label="mobile navigation button" class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -233,23 +235,35 @@
           href="https://www.linkedin.com/in/gyon-shayel-234721242/"
           target="_blank"
           class="footer__connect-link"
-          ><img loading="lazy" src="/LI-In-Bug.png" alt="LinkedIn profile"
-          class="footer__connect-img loading="lazy"" /></a
-        >
+          ><img
+            loading="lazy"
+            src="/LI-In-Bug.png"
+            alt="LinkedIn profile"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
         <a
           href="https://github.com/gyonshayel"
           target="_blank"
           class="footer__connect-link"
-          ><img loading="lazy" src="/github-color.svg" alt="Github repo"
-          class="footer__connect-img loading="lazy"" /></a
-        >
+          ><img
+            loading="lazy"
+            src="/github-color.svg"
+            alt="Github repo"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
         <a
           href="https://x.com/shayeljoshua"
           target="_blank"
           class="footer__connect-link"
-          ><img loading="lazy" src="/x-color.svg" alt="X profile"
-          class="footer__connect-img loading="lazy"" /></a
-        >
+          ><img
+            loading="lazy"
+            src="/x-color.svg"
+            alt="X profile"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
       </div>
       <p class="footer__note">
         &copy; Shayel Joshua 2025 | All rights reserved.
