--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <title>Gyon Shayel Joshua</title>
   </head>
   <body>
-    <header class="header container">
-      <nav>
+    <header>
+      <nav class="header container">
         <ul class="header__menu">
           <li><a class="header__link" href="#about">About</a></li>
           <li><a class="header__link" href="#work">Work</a></li>
@@ -222,52 +222,54 @@
         </a>
       </section>
     </main>
-    <footer class="footer container section">
-      <ul class="footer__nav">
-        <li><a href="#hero" class="footer__nav-link">Home</a></li>
-        <li><a href="#about" class="footer__nav-link">About</a></li>
-        <li><a href="#work" class="footer__nav-link">Work</a></li>
-        <li><a href="#contact" class="footer__nav-link">Contact</a></li>
-      </ul>
-      <div class="footer__connect">
-        <h3 class="footer__connect-title">Connect</h3>
-        <a
-          href="https://www.linkedin.com/in/gyon-shayel-234721242/"
-          target="_blank"
-          class="footer__connect-link"
-          ><img
-            loading="lazy"
-            src="/LI-In-Bug.png"
-            alt="LinkedIn profile"
-            class="footer__connect-img"
-            loading="lazy"
-        /></a>
-        <a
-          href="https://github.com/gyonshayel"
-          target="_blank"
-          class="footer__connect-link"
-          ><img
-            loading="lazy"
-            src="/github-color.svg"
-            alt="Github repo"
-            class="footer__connect-img"
-            loading="lazy"
-        /></a>
-        <a
-          href="https://x.com/shayeljoshua"
-          target="_blank"
-          class="footer__connect-link"
-          ><img
-            loading="lazy"
-            src="/x-color.svg"
-            alt="X profile"
-            class="footer__connect-img"
-            loading="lazy"
-        /></a>
+    <footer class="header-footer">
+      <div class="footer container section">
+        <ul class="footer__nav">
+          <li><a href="#hero" class="footer__nav-link">Home</a></li>
+          <li><a href="#about" class="footer__nav-link">About</a></li>
+          <li><a href="#work" class="footer__nav-link">Work</a></li>
+          <li><a href="#contact" class="footer__nav-link">Contact</a></li>
+        </ul>
+        <div class="footer__connect">
+          <h3 class="footer__connect-title">Connect</h3>
+          <a
+            href="https://www.linkedin.com/in/gyon-shayel-234721242/"
+            target="_blank"
+            class="footer__connect-link"
+            ><img
+              loading="lazy"
+              src="/LI-In-Bug.png"
+              alt="LinkedIn profile"
+              class="footer__connect-img"
+              loading="lazy"
+          /></a>
+          <a
+            href="https://github.com/gyonshayel"
+            target="_blank"
+            class="footer__connect-link"
+            ><img
+              loading="lazy"
+              src="/github-color.svg"
+              alt="Github repo"
+              class="footer__connect-img"
+              loading="lazy"
+          /></a>
+          <a
+            href="https://x.com/shayeljoshua"
+            target="_blank"
+            class="footer__connect-link"
+            ><img
+              loading="lazy"
+              src="/x-color.svg"
+              alt="X profile"
+              class="footer__connect-img"
+              loading="lazy"
+          /></a>
+        </div>
+        <p class="footer__note">
+          &copy; Shayel Joshua 2025 | All rights reserved.
+        </p>
       </div>
-      <p class="footer__note">
-        &copy; Shayel Joshua 2025 | All rights reserved.
-      </p>
     </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
