Add a logo on the mobile header

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
   </head>
   <body>
     <header>
-      <nav class="header container">
+      <nav class="header__content container">
         <ul class="header__menu">
           <li><a class="header__link" href="#about">About</a></li>
           <li><a class="header__link" href="#work">Work</a></li>
           <li><a class="header__link" href="#contact">Contact</a></li>
         </ul>
+        <a
+          class="header__logo"
+          href="https://portfolio-website-ten-blond-63.vercel.app/"
+          >Shayel Joshua</a
+        >
         <button aria-label="mobile navigation button" class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
