Animate mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           href="https://portfolio-website-ten-blond-63.vercel.app/"
           >Shayel Joshua</a
         >
-        <button aria-label="mobile navigation button" class="header__bars">
+        <!-- <button aria-label="mobile navigation button" class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -41,7 +41,12 @@
               clip-rule="evenodd"
             />
           </svg>
-        </button>
+        </button> -->
+        <div aria-label="mobile navigation button" class="header__bars">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
     </header>
     <!-- Mobile navigation -->
