--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
           <li><a class="header__link" href="#work">Work</a></li>
           <li><a class="header__link" href="#contact">Contact</a></li>
         </ul>
-        <a
-          class="header__logo"
-          href="https://portfolio-website-ten-blond-63.vercel.app/"
-          >Shayel Joshua</a
-        >
+        <div class="header-logo">
+          <a
+            class="header-logo__link"
+            href="https://portfolio-website-ten-blond-63.vercel.app/"
+            >Shayel Joshua</a
+          >
+        </div>
         <!-- <button aria-label="mobile navigation button" class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
