--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,21 +16,14 @@
     <title>Gyon Shayel Joshua</title>
   </head>
   <body>
-    <header>
-      <nav class="header__content container">
+    <header class="header container">
+      <nav>
         <ul class="header__menu">
           <li><a class="header__link" href="#about">About</a></li>
           <li><a class="header__link" href="#work">Work</a></li>
           <li><a class="header__link" href="#contact">Contact</a></li>
         </ul>
-        <div class="header-logo">
-          <a
-            class="header-logo__link"
-            href="https://portfolio-website-ten-blond-63.vercel.app/"
-            >Shayel Joshua</a
-          >
-        </div>
-        <!-- <button aria-label="mobile navigation button" class="header__bars">
+        <button aria-label="mobile navigation button" class="header__bars">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -43,12 +36,7 @@
               clip-rule="evenodd"
             />
           </svg>
-        </button> -->
-        <div aria-label="mobile navigation button" class="header__bars">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+        </button>
       </nav>
     </header>
     <!-- Mobile navigation -->
@@ -234,54 +222,52 @@
         </a>
       </section>
     </main>
-    <footer class="header-footer">
-      <div class="footer container section">
-        <ul class="footer__nav">
-          <li><a href="#hero" class="footer__nav-link">Home</a></li>
-          <li><a href="#about" class="footer__nav-link">About</a></li>
-          <li><a href="#work" class="footer__nav-link">Work</a></li>
-          <li><a href="#contact" class="footer__nav-link">Contact</a></li>
-        </ul>
-        <div class="footer__connect">
-          <h3 class="footer__connect-title">Connect</h3>
-          <a
-            href="https://www.linkedin.com/in/gyon-shayel-234721242/"
-            target="_blank"
-            class="footer__connect-link"
-            ><img
-              loading="lazy"
-              src="/LI-In-Bug.png"
-              alt="LinkedIn profile"
-              class="footer__connect-img"
-              loading="lazy"
-          /></a>
-          <a
-            href="https://github.com/gyonshayel"
-            target="_blank"
-            class="footer__connect-link"
-            ><img
-              loading="lazy"
-              src="/github-color.svg"
-              alt="Github repo"
-              class="footer__connect-img"
-              loading="lazy"
-          /></a>
-          <a
-            href="https://x.com/shayeljoshua"
-            target="_blank"
-            class="footer__connect-link"
-            ><img
-              loading="lazy"
-              src="/x-color.svg"
-              alt="X profile"
-              class="footer__connect-img"
-              loading="lazy"
-          /></a>
-        </div>
-        <p class="footer__note">
-          &copy; Shayel Joshua 2025 | All rights reserved.
-        </p>
+    <footer class="footer container section">
+      <ul class="footer__nav">
+        <li><a href="#hero" class="footer__nav-link">Home</a></li>
+        <li><a href="#about" class="footer__nav-link">About</a></li>
+        <li><a href="#work" class="footer__nav-link">Work</a></li>
+        <li><a href="#contact" class="footer__nav-link">Contact</a></li>
+      </ul>
+      <div class="footer__connect">
+        <h3 class="footer__connect-title">Connect</h3>
+        <a
+          href="https://www.linkedin.com/in/gyon-shayel-234721242/"
+          target="_blank"
+          class="footer__connect-link"
+          ><img
+            loading="lazy"
+            src="/LI-In-Bug.png"
+            alt="LinkedIn profile"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
+        <a
+          href="https://github.com/gyonshayel"
+          target="_blank"
+          class="footer__connect-link"
+          ><img
+            loading="lazy"
+            src="/github-color.svg"
+            alt="Github repo"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
+        <a
+          href="https://x.com/shayeljoshua"
+          target="_blank"
+          class="footer__connect-link"
+          ><img
+            loading="lazy"
+            src="/x-color.svg"
+            alt="X profile"
+            class="footer__connect-img"
+            loading="lazy"
+        /></a>
       </div>
+      <p class="footer__note">
+        &copy; Shayel Joshua 2025 | All rights reserved.
+      </p>
     </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
