--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://use.typekit.net/mgg7mjd.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My Portfolio Website" />
     <meta name="keywords" content="web design, html, css, javascript" />
-    <title>Gyon Shayel Joshua</title>
+    <title>SHAYEL JOSHUA</title>
+    <link rel="icon" type="image/x-icon" href="./public/favicon.png" />
   </head>
   <body>
     <header>
