Make sub section headers sticky

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="My Portfolio Website" />
     <meta name="keywords" content="web design, html, css, javascript" />
     <title>SHAYEL JOSHUA</title>
-    <link rel="icon" type="image/x-icon" href="./public/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
   </head>
   <body>
     <header>
@@ -142,16 +142,6 @@
               <figure>
                 <img loading="lazy" src="/react-color.svg" alt="React logo" />
                 <figcaption>React</figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img
-                  loading="lazy"
-                  src="/nextdotjs-color.svg"
-                  alt="Next.js logo"
-                />
-                <figcaption>Next.js</figcaption>
               </figure>
             </li>
             <li>
