--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
                 <figcaption>Tailwind CSS</figcaption>
               </figure>
             </li>
+            <li>
+              <figure>
+                <img loading="lazy" src="/git-color.svg" alt="Git logo" />
+                <figcaption>Git</figcaption>
+              </figure>
+            </li>
           </ul>
         </div>
       </section>
@@ -181,7 +187,7 @@
               like semantic HTML, CSS Flexbox, Grid, and responsive design
               techniques.
             </p>
-            <a class="btn work__project-btn" href="#">View Project</a>
+            <a class="btn work__project-btn" href="#">Learn More</a>
           </div>
 
           <!-- Project 2 -->
@@ -205,7 +211,7 @@
               layouts, styling with Flexbox and Grid, and designing a
               professional business-focused web page.
             </p>
-            <a class="btn work__project-btn" href="#">View Project</a>
+            <a class="btn work__project-btn" href="#">Learn More</a>
           </div>
         </div>
       </section>
@@ -224,8 +230,8 @@
         </a>
       </section>
     </main>
-    <footer class="header-footer">
-      <div class="footer container section">
+    <footer>
+      <div class="footer__content container section">
         <ul class="footer__nav">
           <li><a href="#hero" class="footer__nav-link">Home</a></li>
           <li><a href="#about" class="footer__nav-link">About</a></li>
